force-app/main/default/objects/Policy__c/fields/What_is_your_trip_destination_in_US__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_trip_destination_in_US__c</fullName>
    <label>What is your trip destination?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Policy_Type_picklist__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aguascalientes</fullName>
            </value>
            <value>
                <fullName>Baja California</fullName>
            </value>
            <value>
                <fullName>Baja California: Ensenada</fullName>
            </value>
            <value>
                <fullName>Baja California: Mexicali</fullName>
            </value>
            <value>
                <fullName>Baja California: Puerto Nuevo</fullName>
            </value>
            <value>
                <fullName>Baja California: Rosarito</fullName>
            </value>
            <value>
                <fullName>Baja California: San Felipe</fullName>
            </value>
            <value>
                <fullName>Baja California: Tecate</fullName>
            </value>
            <value>
                <fullName>Baja California: Tijuana</fullName>
            </value>
            <value>
                <fullName>Baja California: Valle de Guadalupe</fullName>
            </value>
            <value>
                <fullName>Baja California Sur</fullName>
            </value>
            <value>
                <fullName>Campeche</fullName>
            </value>
            <value>
                <fullName>Chiapas</fullName>
            </value>
            <value>
                <fullName>Chihuahua</fullName>
            </value>
            <value>
                <fullName>Chihuahua: Ciudad Juarez</fullName>
            </value>
            <value>
                <fullName>Coahuila</fullName>
            </value>
            <value>
                <fullName>Colima</fullName>
            </value>
            <value>
                <fullName>Durango</fullName>
            </value>
            <value>
                <fullName>Guanajuato</fullName>
            </value>
            <value>
                <fullName>Guerrero</fullName>
            </value>
            <value>
                <fullName>Hidalgo</fullName>
            </value>
            <value>
                <fullName>Jalisco</fullName>
            </value>
            <value>
                <fullName>Jalisco: Ajijic</fullName>
            </value>
            <value>
                <fullName>Mexico City</fullName>
            </value>
            <value>
                <fullName>Michoacan</fullName>
            </value>
            <value>
                <fullName>Morelos</fullName>
            </value>
            <value>
                <fullName>Nayarit</fullName>
            </value>
            <value>
                <fullName>Nuevo Leon</fullName>
            </value>
            <value>
                <fullName>Nuevo Leon: Monterrey</fullName>
            </value>
            <value>
                <fullName>Oaxaca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>