force-app/main/default/objects/Policy__c/fields/Why_Terminate_Policy__c.field-meta.xml
<CustomField>
    <fullName>Why_Terminate_Policy__c</fullName>
    <label>Why Terminate Policy</label>
    <type>TextArea</type>
</CustomField>